[tool.poetry]
name = "vinotes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nikola = {extras = ["extras"], version = "^8.3.1"}
jinja2 = "^3.1.4"
aiohttp = "^3.10.0"
watchdog = "^4.0.1"
setuptools = "^72.1.0"
wheel = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
